# briefing

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: README.md  implementation-plan.md  session-ingest-smoke.md  setup-and-configuration-walkthrough.md  soak-runbook-week1.md
docs/eval/: README.md  entry-template.json
docs/source-guides/: README.md  email-source-discovery.md  email-source-setup.md  file-source-setup.md  notion-source-setup.md  previous-note-source.md  slack-source-setup.md
scripts/: meeting-intelligence-smoke.sh  setup.sh
scripts/launchd/: README.md  com.user.briefing-watch.plist.template  com.user.briefing.plist.template  install-plist.sh  install-watch-plist.sh  render-plist.sh  render-watch-plist.sh  uninstall-all.sh  uninstall-plist.sh  uninstall-watch-plist.sh
src/briefing/: __init__.py  bootstrap.py  calendar.py  coerce.py  llm.py  location_routing.py  logging_utils.py  main.py  matching.py  models.py  notes.py  planning.py  prompts.py  recording_config.py  retention.py  runner.py  settings.py  setup.py  state.py  utils.py  validation.py  watch.py
tests/: conftest.py  test_calendar.py  test_contract_fixtures.py  test_email_source.py  test_llm.py  test_logging_utils.py  test_matching.py  test_notes.py  test_planning.py  test_prompts.py  test_retention.py  test_runner.py  test_session_ingest.py  test_session_reprocess.py  test_settings.py  test_setup.py  test_slack_source.py  test_state.py  test_validation.py  test_watch.py
user_config/: settings.toml
user_config/defaults/: settings.toml
user_config/series/: README.md  (+1 more)
(+22 files in other folders)
